# mDownloader

./: .gitignore  CMakeLists.txt  DEVLOG.md  Makefile  README.md  TODO.md  block.cpp  block.h  dbmanager.cpp  dbmanager.h  debug.cpp  deepin_os_match2019  devlog.txt  downloader.cpp  downloader.h  ftp.cpp  ftpparser.cpp  ftpparser.h  ftpplugin.cpp  header.cpp  http.cpp  http.h  httpplugin.cpp  httpplugin.h  mDownloader.pro  mDownloader_zh_CN.qm  mDownloader_zh_CN.ts  macro.h  main.cpp  myget.h  plugin.cpp  plugin.h  progressbar.cpp  progressbar.h  proxy.cpp  proxy.h  task.cpp  task.h  url.cpp  url.h
.github/workflows/: main.yml
debian/: changelog  control  copyright
doc/: mDownloader功能文档.docx
src/: advio.cpp  dbmanager.cpp  debug.cpp  debug.h  downloader.cpp  downloader.h  ftpparser.cpp  ftpplugin.cpp  ftpplugin.h  mDownloader.qrc  macro.h  main.cpp  myget.h  progressbar.cpp  progressbar.h  status.cpp  status.h  task.cpp  task.h  url.cpp  utils.cpp  utils.h
src/db/: dbmanager.h
src/io/: advio.cpp  advio.h  block.cpp  block.h
src/protocols/: header.cpp  header.h  plugin.cpp  plugin.h  proxy.cpp  proxy.h  url.cpp  url.h
src/protocols/ftp/: ftp.cpp  ftp.h  ftpparser.cpp  ftpparser.h  ftpplugin.cpp  ftpplugin.h
src/protocols/http/: http.cpp  http.h  httpplugin.cpp  httpplugin.h
src/ui/: errormessagebox.cpp  errormessagebox.h  jobview.cc  mDownloader.qrc  mainwindow.cpp  mainwindow.h  newtask.cpp  newtask.h
test/Header/: Header.pro
test/TINY_WebServer/: TINY_WebServer.pro  csapp.c  tiny.c
test/TestDownloader/: hashworker.cpp  tst_testdownloader.cc
tests/: CMakeLists.txt
tests/Header/: test_header.cpp  tst_headertest.cpp
tests/TINY_WebServer/: csapp.h  tiny.c
tests/TestDownloader/: TestDownloader.pro  hashworker.h  test_Downloader.cpp
tests/db_manager/: test_db_manager.cpp
ui/: jobview.h  mainwindow.cpp  mainwindow.h  newtask.cpp  newtask.h  newtask.ui
